# pico-synth

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json  setup.sh
include/: i2s_audio.h  knobs.h  midi.h  synth.h  tusb_config.h
src/: i2s_audio.c  knobs.c  main.c  midi.c  synth.c  usb_descriptors.c
